# DTCity

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  AGENTS.md  CESIUM_NATIVE_BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  build_config.sh  build_dll.bat  build_lib.sh  buildrun.bat  compile_commands.json  debug.bat  docker-compose.yml  dockerfile  entrypoint.cpp  entrypoint.hpp  imgui.ini  main.cpp  op_data_example.json  profile_build.sh  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
.zed/: debug.json  tasks.json
assets/audi/: license.txt
assets/cars/: scene.gltf
async/: async.cpp  async.hpp
base/: algos.cpp  algos.hpp  base_arena.c  base_arena.h  base_context_cracking.h  base_core.c  base_core.cpp  base_core.h  base_core.hpp  base_diagnostics.cpp  base_diagnostics.hpp  base_inc.cpp  base_inc.hpp  base_math.c  base_math.cpp  base_math.h  base_math.hpp  base_profile.cpp  base_profile.hpp  base_random.hpp  base_strings.c  base_strings.cpp  base_strings.h  base_strings.hpp  base_thread_context.c  base_thread_context.h  container.cpp  container.hpp  error.hpp  io.cpp  io.hpp  os_linux.hpp  os_win.cpp  os_win.hpp
base/os_core/: os_core_inc.c  os_core_inc.h
cache/: openapi_data.txt  openapi_node_ways_buildings.json  openapi_node_ways_highway.json
city/: city.cpp  city.hpp  city_inc.hpp
cmake/: FindCesiumNative.cmake
data/: a.gltf
data/cache/: openapi_node_ways_buildings.json  openapi_node_ways_highway.json
data/matsim/: config.xml  events
data/shaders/: compile.bat  compile.sh
data/textures/: car_collection.ktx2
docs/: About.md  CesiumIntegration.md  Design.md  HowTo.md  ReleaseNotes.md  TODO.md  cross_platform_obs.md  development-helpers.md  development-info.md  release-notes.md  usage-guide.md
docs/diagrams/: layer_dependencies.mmd
draw/: draw.cpp  draw.hpp  draw_inc.cpp  draw_inc.hpp  font.cpp  font.hpp
font_cache/: font_cache.cpp  font_cache.hpp
font_provider/: font_provider.cpp  font_provider.hpp  font_provider_inc.cpp  font_provider_inc.hpp
font_provider/freetype/: font_provider_freetype.cpp  font_provider_freetype.hpp
http/: http.c  http.h  http_inc.c  http_inc.cpp  http_inc.h
http/linux/: http_linux.cpp  http_linux.hpp
http/win32/: http_win32.c  http_win32.h
imgui/: imconfig.h  imgui_inc.cpp  imgui_inc.hpp
lib_artifacts/win/: TracyClient.lib  glfw3.lib
lib_artifacts/win32/: ktx_read.lib
lib_wrappers/: cgltf.cpp  cgltf.hpp  json.cpp  json.hpp  lib_wrappers_inc.cpp  lib_wrappers_inc.hpp  render.cpp  render.hpp  vulkan.cpp  vulkan.hpp  vulkan_common.cpp  vulkan_common.hpp
os_core/: os_core.c  os_core.cpp  os_core.h  os_core.hpp  os_core_inc.c  os_core_inc.cpp  os_core_inc.h  os_core_inc.hpp
os_core/linux/: os_core_linux.c  os_core_linux.h
os_core/win32/: os_core_win32.c  os_core_win32.cpp  os_core_win32.h  os_core_win32.hpp
osm/: osm.cpp
profiler/client/: TracyCallstack.cpp  TracyProfiler.cpp
render/: render.cpp  render.hpp  render_inc.cpp  render_inc.hpp
render/vulkan/: vk_texture.cpp  vk_texture.hpp  vulkan.cpp  vulkan.hpp  vulkan_common.cpp  vulkan_common.hpp  vulkan_interface.cpp
scratch/: netascore.txt  netascore_async_system.md
scripts/: colormaps.py
shaders/: compile.bat  compile.sh  shader.frag  terrain.frag  terrain.tesc  terrain.tese  terrain.vert
shaders/building/: building.frag
shaders/car/: car.vert
shaders/model_3d/: model_3d.frag  model_3d.vert
shaders/road/: road.frag  road.geom  road.vert
shaders/terrain/: terrain.tesc  terrain.tese
simulator/: sim_interface.cpp  sim_interface.hpp  simulator_inc.cpp  simulator_inc.hpp
simulator/matsim/: matsim.cpp  matsim.hpp
simulator/test/: build_test.bat  test_main.cpp
src/: debug_forward_ref.hpp  debug_log.cpp  debug_log.hpp  diagnostics.hpp  entrypoint.cpp  entrypoint.hpp  includes.cpp  includes.hpp  main.cpp  mule.cpp
src/async/: async.cpp  async.hpp  async_arena.cpp  async_arena.hpp  async_heap.cpp  async_heap.hpp  async_http.cpp  async_http.hpp  async_inc.cpp  async_inc.hpp  async_task.cpp  async_task.hpp  async_websocket.cpp  async_websocket.hpp  mpmc_queue.cpp  mpmc_queue.hpp  segment_buffer.cpp  segment_buffer.hpp  spmc_queue.cpp  spmc_queue.hpp  thread_pool.cpp  thread_pool.hpp
src/base/: base_allocator.cpp  base_allocator.hpp  base_arena.c  base_arena.cpp  base_arena.h  base_arena.hpp  base_container.cpp  base_container.hpp  base_context_cracking.h  base_core.cpp  base_core.hpp  base_debug_log.hpp  base_diagnostics.hpp  base_inc.cpp  base_inc.hpp  base_lists.cpp  base_lists.hpp  base_math.c  base_math.h  base_profile.cpp  base_profile.hpp  base_random.cpp  base_random.hpp  base_strings.cpp  base_strings.hpp  base_thread_context.c  base_thread_context.h  cache.cpp  cache.hpp  container.cpp  container.hpp  debug_log.hpp
src/cesium/: cesium_native_headers.hpp  cesium_tileset.cpp  cesium_tileset.hpp
src/city/: city.cpp  city.hpp  city_inc.cpp  city_inc.hpp  json.hpp  neta.cpp  neta.hpp
src/draw/: draw.cpp  draw.hpp
src/gfx/: geometry.cpp  geometry.hpp  gfx_inc.cpp  gfx_inc.hpp  io.cpp  io.hpp  ui.hpp
src/gltfw/: gltfw.cpp  gltfw.hpp
src/http/: http.c  http.h  http_inc.cpp  http_inc.hpp
src/lib_wrappers/: cgltf.cpp  cgltf.hpp  json.cpp  json.hpp  lib_wrappers_inc.cpp  lib_wrappers_inc.hpp
src/misc/: camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  io.cpp  io.hpp  misc_inc.cpp  misc_inc.hpp
src/os_core/: os_core.cpp  os_core.hpp  os_core_inc.cpp
src/osm/: osm.cpp  osm.hpp
src/render/: render.cpp  render.hpp  render_inc.cpp  render_inc.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/async/: test_heap.cpp
tests/base/: test_allocator.cpp  test_container.cpp  test_strings.cpp
textures/: openapi_node_ways_highway.json
triplets/: x64-windows-static-md-asan.cmake
ui/: box.cpp  fonts.cpp  geometry.cpp  geometry.hpp  globals.cpp  globals.hpp  io.cpp  io.hpp  osm.cpp  osm.hpp  state.hpp  terrain.cpp  terrain.hpp  ui.cpp  ui.hpp  vulkan_helpers.cpp  vulkan_helpers.hpp  widget.hpp
(+42 files in other folders)
